# architecture-simulator

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  COMMIT_EDITMSG  Dockerfile  LICENSE  README.md  build.sh  build_svg.py  d  docker-run.sh  jsconfig.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: python-publish.yml
architecture_simulator/cli/: __init__.py  cli.py  test.txt
architecture_simulator/examples/: examples.py
architecture_simulator/gui/: new_webgui.py  riscv_fiveStage_svg_directives.py  webgui.py  (+4 more)
docs/: Pipeline_UML.graphml  add_isa_to_webgui.md  implement_new_isa.md  instructions.ods  pipeline.md  pipeline_svg.md  toy_isa.html  toy_isa.md
new-webgui/: index.html  package-lock.json  package.json
tests/: test_architectural_state.py  test_cache.py  test_cache_replacement_strategies.py  test_caches_in_state.py  test_dhrystone.py  test_ecalls.py  test_instruction_cache.py  test_isa.py  test_memory.py  test_parser.py  test_pipeline.py  test_programs.py  test_riscv_architectural_state.py  test_riscv_instructions.py  test_riscv_parser.py  test_riscv_pipeline.py  test_riscv_programs.py  test_riscv_simulation.py  test_simulation.py  test_toy_architectural_state.py  test_toy_isa.py  test_toy_parser.py  test_toy_simulation.py  test_util.py
typings/: archsim_js.pyi
webgui/: RISCV_DialogEditCommands.css  RISCV_Simulator.css  WEB_APP_BASIC.css  bootstrap.min.css  index.html  new-index.html  new-styles.css  package-lock.json  package.json  splitjs.css  styles.css  vite.config.js
(+688 files in other folders)
